Fix monitoring bar chart alignement inside table for civio/presupuesto-management#1216

--- a/budget_app/static/stylesheets/_monitoring.scss
+++ b/budget_app/static/stylesheets/_monitoring.scss
@@ -109,6 +109,7 @@ $monitoring-bar-color: $brand-primary;
   width: 250px;
   display: flex;
   position: relative;
+  float: right;
 
   .bar-outline {
     width: 180px;
